2005-04-06  Jakub Jelinek  <jakub@redhat.com>

	PR c++/19317
	* g++.dg/opt/pr19317-1.C: New test.
	* g++.dg/opt/pr19317-2.C: New test.
	* g++.dg/opt/pr19317-3.C: New test.

2005-06-06  Jakub Jelinek  <jakub@redhat.com>

	PR regression/21897
	* gcc.c-torture/execute/20050604-1.c: New test.

2005-05-18  Jakub Jelinek  <jakub@redhat.com>

	* ada/acats/run_all.sh: Filter out spawn line from target_bit.

2005-07-07  Release Manager

	* GCC 4.0.1 released.

2005-06-24  Mark Mitchell  <mark@codesourcery.com>

	PR 22171
	* gcc.dg/tree-ssa/pr22171.c: New test.

2005-06-23  Mark Mitchell  <mark@codesourcery.com>

	Backport:
	2005-06-19  Richard Henderson  <rth@redhat.com>
	* gcc.dg/tree-ssa/pr21985.c: Use size_t.
	2005-06-13  Zdenek Dvorak  <dvorakz@suse.cz>
	PR middle-end/21985
	* gcc.dg/tree-ssa/pr21985.c: New test.

2005-06-19  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/backslash_1.f90: New test.
	* gfortran.dg/backslash_2.f90: New test.

2005-06-20  Jan Beulich  <jbeulich@novell.com>

	* g++.old-deja/g++.jason/thunk2.C: On NetWare, also account for
	unsupportable relocations.
	* g++.old-deja/g++.other/store-expr1.C: Likewise.
	* gcc.dg/20050321-2.c: xfail for NetWare.

2005-06-18  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/pr17229.f: Take care of the new obsolescence
	warning for arithmetic IF statements.

2005-06-17  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/21850
	* gcc.c-torture/execute/20050607-1.c: New test.

2005-06-17  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/19216
	* gfortran.dg/pr19216.f: Add test.

2005-06-17  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/19155
	* gfortran.dg/pr19155.f: Add test.

2005-06-17  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR libfortran/16436
	* gfortran.dg/g77/f77-edit-t-in.f: Not XFAIL-ed any more.

2005-06-14  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/22043
	* gcc.c-torture/execute/20050613-1.c: New test.
